--- a/cafeservellocontroler/Views/Produto/_Detalhes.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Detalhes.cshtml
@@ -12,7 +12,11 @@
 
 
         <div class="row div-conteudo">
-            <p class="p-horario"><strong>Nome:</strong> @Model.Nome</p>
+            
+            <p class="p-horario">
+                <strong>Nome:</strong> 
+                @Model.Nome
+            </p>
 
             <p class="p-horario">
                 <strong>Descrição:</strong>
@@ -70,12 +74,6 @@
                 </p>
             </div>
         </div>
-
-
-        </div>
-    
-  
-    
-
+    </div>
 </div>
 
