--- a/cafeservellocontroler/Views/Shared/Components/Menu/Default.cshtml
+++ b/cafeservellocontroler/Views/Shared/Components/Menu/Default.cshtml
@@ -22,7 +22,8 @@
 <ul id="side_items">
     <li class="side-item" data-url="/Produto/Index">
         <a>
-            <i class="fa-brands fa-product-hunt"></i>
+            @* <i class="fa-brands fa-product-hunt"></i> *@
+                <i class="fa-solid fa-mug-hot"></i>
             <span class="item-description">
                 Produto
             </span>
