--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -4,94 +4,92 @@
 @{
     ViewData["Title"] = "Revendedor";
 }
-<div style="display: flex; justify-content:center;">
-    <div class="container-fluid">
-        <h1 class="display-4">Revendedor</h1>
 
-        @*Esse daqui e o BOTAO DE CRIAR REVENDEDOR*@
+@*TITULO TECHHOUSE PEGANOIS*@
+<div class=" mt-4 mb-4 p-3 shadow-sm d-inline-flex">
+    <i class="fa-solid fa-user fa-xl d-flex align-items-center"></i>
+    <p class="tamanho-font-titulo borda-titulo ">
+        Revendedor
+    </p>
+</div>
+
+
+
+@*Sao mensagens de erro, que pegam as informacoes da controller, são descritas la*@
+
+
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @TempData["MensagemSucesso"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+@if (TempData["MensagemErro"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["MensagemErro"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+@*BOTÃO NOVO E PESQUISAR JUNTO ÓIA SÓ QUE COISA BOA*@
+<div class="search-position">
+    <div id="container-search">
+
+        <div class="input-group">
+            <div class="input-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+
+            <input type="text"
+                   id="search"
+                   class="input-field"
+                   placeholder="Pesquisar Produto" />
+        </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCriar" onclick="limparFormulario()">
-                Novo
+            <button class="btn-lg btn-success"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalCriar"
+                    onclick="limparFormulario()">
+                <i class="fa-regular fa-square-plus"></i>
             </button>
         </div>
 
+    </div>
+</div>
 
         @*Esse daqui e o modal de CRIAR REVENDEDOR*@
 
-        <div class="modal fade" id="modalCriar" tabindex="-1" aria-labelledby="modalCriarLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalCriarLabel">Adicionar Revendedor</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-                    </div>
-                    <div class="modal-body">
-                        @Html.Partial("_Criar", new RevendedorViewModel())
-                    </div>
-                </div>
-            </div>
+<div class="modal fade" id="modalCriar" tabindex="-1" aria-labelledby="modalCriarLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalCriarLabel">Cadastrar Revendedor</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+           </div>
+           <div class="modal-body">
+                @await Html.PartialAsync("_Criar", new RevendedorViewModel())
+           </div>
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
+    </div>
+</div>
 
 
-
-
-        @*Sao mensagens de erro, que pegam as informacoes da controller, são descritas la*@
-
-
-        @if (TempData["MensagemSucesso"] != null)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                @TempData["MensagemSucesso"]
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        }
-
-        @if (TempData["MensagemErro"] != null)
-        {
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                @TempData["MensagemErro"]
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        }
-
-
-
-        @* A barra de pesquisar *@
-        <div class="search-position">
-            <div id="container-search">
-                <div class="input-group">
-                    <div class="input-icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-
-                    </div>
-
-                    <input type="text"
-                           id="search"
-                           class="input-field"
-                           placeholder="Pesquisar Produto" />
-                </div>
-            </div>
-        </div>
-
-        @*Aqui e a tabela, onde quando for adicionado ira aparecer um novo revendedor*@
-
-        <table class="table" id="table">
-            <thead>
-                <tr>
-                    <th scope="col">Codigo</th>
+@*Aqui e a tabela, onde quando for adicionado ira aparecer um novo revendedor*@
+<div class="table-responsive table-wrapper p-3">
+    <table class="table table-bordered table-striped" id="table">
+        <thead class="table-thead">
+            <tr class="div-thead">
+                    <th scope="col" class="idTR">ID</th>
                     <th scope="col">Nome</th>
-                    <th scope="col">Telefone</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">CNPJ</th>
-                    <th scope="col">Endereço</th>
                     <th scope="col">Nome Fantasia</th>
-                    <th scope="col">Data de Criação</th>
-                    <th scope="col">Modificar</th>
+                    <th scope="col">Telefone</th>   
+                    <th scope="col">Endereço</th>
+                    <th scope="col" class="alinharModificar-ApagarTh">Modificar</th>
+                    <th scope="col" class="alinharModificar-ApagarTh">Apagar</th>
                 </tr>
             </thead>
             <tbody>
@@ -100,76 +98,98 @@
                     foreach (RevendedorViewModel revendedor in Model)
                     {
                         <tr>
-                            <th scope="row">@revendedor.Id</th>
-                            <td>@revendedor.Nome</td>
-                            <td>@revendedor.Telefone</td>
-                            <td>@revendedor.Email</td>
-                            <td>@revendedor.Cnpj</td>
-                            <td>@revendedor.Endereco</td>
-                            <td>@revendedor.NomeFantasia</td>
-                            <td>@revendedor.DataCadastro</td>
-                            <td>
-                                <div role="group">
+                            <th scope="row" class="idTH">@revendedor.Id</th>
+                            <td scope="row" class="espacoPadraoTabela">@revendedor.Nome</td>
+                            <td scope="row" class="espacoPadraoTabela">@revendedor.NomeFantasia</td>
+                            <td scope="row" class="espacoPadraoTabela">@revendedor.Telefone</td>
+                            <td scope="row" class="espacoPadraoTabela">@revendedor.Endereco</td>
+      
+                            <td scope="row" class="espacoModificarOpcoes">
+                            <div role="group" class="d-grid gap-1 formatacaoBotaoTabela">
 
 
-                                    @*Esse daqui e o modal de EDITAR REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
+                                    @*Esse daqui e o modal de DETALHES REVENDEDOR  *@
 
-                                    <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDetalhes-@revendedor.Id">
+                                    
+                                    <a role="button" class="btn-sm btn-primary btnModificadoTamanhoIgual" data-bs-toggle="modal" data-bs-target="#modalDetalhes-@revendedor.Id">
+                                        <i class="fa-solid fa-calendar-week"></i>
                                         Detalhes
                                     </a>
 
                                     <div class="modal fade" id="modalDetalhes-@revendedor.Id" tabindex="-1" aria-labelledby="modalDetalhesLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
+                                        <div class="modal-dialog modal-lg">
                                             <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title">Alterar Revendedor</h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                            <div class="modal-header d-flex justify-content-between align-items-center">
+
+                                                <h5 class="modal-title">Detalhes do Revendedor</h5>
+
+                                                <div class="d-flex gap-2">
+                                                    <a role="button"
+                                                       class="btn btn-outline-success btnApagar btnAbrirModal"
+                                                       data-modal-target="#modalEditar-@revendedor.Id"
+                                                       data-current-modal="#modalDetalhes-@revendedor.Id">
+                                                        <i class="fa-solid fa-pen-to-square fa-lg"></i>
+                                                    </a>
+
+                                                    <a role="button"
+                                                       class="btn btn-outline-danger btnApagar btnAbrirModal"
+                                                       data-modal-target="#modalApagarConfirmacao-@revendedor.Id"
+                                                       data-current-modal="#modalDetalhes-@revendedor.Id">
+                                                        <i class="fa-regular fa-trash-can fa-lg"></i>
+                                                    </a>
+
+
+                                                    <button type="button" class="btn-close btn-close-modal"
+                                                            data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
+                                            </div>
                                                 <div class="modal-body">
-                                                    @Html.Partial("_Detalhes", revendedor)
+                                                    @await Html.PartialAsync("_Detalhes", revendedor)
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
+                                    @*Esse daqui e o modal de EDITAR REVENDEDOR  *@
 
-
-                                    <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar-@revendedor.Id">
+                                    <a role="button" class="btn-sm btn-success btnModificadoTamanhoIgual" data-bs-toggle="modal" data-bs-target="#modalEditar-@revendedor.Id">
+                                        <i class="fa-solid fa-pen-to-square"></i>
                                         Editar
                                     </a>
 
                                     <div class="modal fade" id="modalEditar-@revendedor.Id" tabindex="-1" aria-labelledby="modalEditarLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
+                                        <div class="modal-dialog modal-lg">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title">Alterar Revendedor</h5>
+                                                    <h5 class="modal-title">Editar Revendedor</h5>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    @Html.Partial("_Editar", revendedor)
+                                                    @await Html.PartialAsync("_Editar", revendedor)
                                                 </div>
                                             </div>
                                         </div>
                                     </div> 
+                                </div>
+                            </td>
 
 
+                            <td scope="row" class="espacoApagarOpcoes">
 
-                                    @*Esse daqui e o modal de APAGAR O REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
+                                    @*Esse daqui e o modal de APAGAR O REVENDEDOR*@
+                                <a role="button" class="btn-sm btn-outline-danger btnApagar" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@revendedor.Id">
+                                    <i class="fa-regular fa-trash-can fa-lg"></i>
+                                </a>
 
-                                    <a role="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@revendedor.Id">
-                                        Apagar
-                                    </a>
-
-                                    <div class="modal fade" id="modalApagarConfirmacao-@revendedor.Id" tabindex="-1" aria-labelledby="modalApagarConfirmacaoLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title">Apagar Revendedor</h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    @Html.Partial("~/Views/Revendedor/ApagarConfirmacao.cshtml", revendedor)
-                                                </div>
+                                <div class="modal fade" id="modalApagarConfirmacao-@revendedor.Id" tabindex="-1" aria-labelledby="modalApagarConfirmacaoLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-lg">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Apagar Revendedor</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                @await Html.PartialAsync("~/Views/Revendedor/ApagarConfirmacao.cshtml", revendedor)
                                             </div>
                                         </div>
                                     </div>
@@ -178,10 +198,31 @@
                         </tr>
                     }
                 }
+        </tbody>
+    </table>
+ </div>
+    
 
-            </tbody>
-        </table>
-    </div>
-</div>
+<script>
+        document.addEventListener('click', function (e) {
+        if (e.target.closest('.btnAbrirModal')) {
+
+            const btn = e.target.closest('.btnAbrirModal');
+            const currentModal = document.querySelector(btn.dataset.currentModal);
+            const nextModal = document.querySelector(btn.dataset.modalTarget);
+
+            // Fecha o modal atual
+            const modalInstance = bootstrap.Modal.getInstance(currentModal);
+            modalInstance.hide();
+
+            // Aguarda o fade-out do modal atual (~300ms)
+            currentModal.addEventListener('hidden.bs.modal', function () {
+                const newModal = new bootstrap.Modal(nextModal);
+                newModal.show();
+            }, { once: true });
+        }
+    });
+</script>
+
 
 
