--- a/cafeservellocontroler/Views/Usuario/ApagarConfirmacao.cshtml
+++ b/cafeservellocontroler/Views/Usuario/ApagarConfirmacao.cshtml
@@ -4,9 +4,34 @@
     ViewData["Title"] = "Confirmação de Apagar Usuário";
 }
 
+<div class="div-Criar responsivo">
 <div class="text-center">
-    <h3>Realmente deseja apagar o Usuario (@Model.Email)</h3>
+    <p class="btn-danger p-4">Aviso, o produto selecionado será excluído permanentemente!</p>
 
-    <a class="btn btn-primary btn-block" role="button" asp-controller="Usuario" asp-action="Index">Cancelar Exclusão</a>
-    <a class="btn btn-danger btn-block" role="button" asp-controller="Usuario" asp-route-id="@Model.Id" asp-action="Apagar">Confirmar Exclusão</a>
+    <div class="div-conteudo">
+        <p class="display-6">
+            Realmente deseja apagar o Produto
+            <br />(@Model.Login)
+        </p>
+    </div>
+
+    <br />
+    <div class="d-flex justify-content-between">
+        <a class="btn btn-outline-primary btnApagar btn-block" role="button" data-bs-dismiss="modal"
+           asp-controller="Usuario" asp-action="Index">
+            <i class="fa-solid fa-arrow-left fa-lg"></i>
+            Cancelar Exclusão
+        </a>
+
+        <a role="button"
+           class="btn btn-outline-danger btnApagar"
+           asp-controller="Usuario" asp-route-id="@Model.Id"
+           asp-action="Apagar">
+
+            <i class="fa-regular fa-trash-can fa-lg"></i>
+            Excluir
+        </a>
+    </div>
 </div>
+</div>
+
