--- a/cafeservellocontroler/Views/Usuario/Index.cshtml
+++ b/cafeservellocontroler/Views/Usuario/Index.cshtml
@@ -3,24 +3,68 @@
 @{
     ViewData["Title"] = "Usuário";
 }
-<div style="display: flex; justify-content:center;">
-    <div class="container-fluid">
-        <h1 class="display-4">Usuário</h1>
+<div class=" mt-4 mb-4 p-3 shadow-sm d-inline-flex" >
+       
+        
+    
+    <i class="fa-solid fa-hands fa-xl d-flex align-items-center"></i>
+    <p class="tamanho-font-titulo borda-titulo ">
+        Usuários
+    </p>
+</div>
 
-        @*Esse daqui e o BOTAO DE CRIAR Usuario*@
+
+@*Sao mensagens de erro, que pegam as informacoes da controller, são descritas la*@
+
+
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @TempData["MensagemSucesso"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+@if (TempData["MensagemErro"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["MensagemErro"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+        
+@* A barra de pesquisar *@
+<div class="search-position">
+    <div id="container-search">
+
+        <div class="input-group">
+            <div class="input-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+
+            <input type="text"
+                   id="search"
+                   class="input-field"
+                   placeholder="Pesquisar Produto" />
+        </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCriar" onclick="limparFormulario()">
-                Novo
+            <button class="btn-lg btn-success"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalCriar"
+                    onclick="limparFormulario()">
+                <i class="fa-regular fa-square-plus"></i>
             </button>
         </div>
 
+    </div>
+</div>
 
         @*Esse daqui e o modal de CRIAR REVENDEDOR*@
 
         <div class="modal fade" id="modalCriar" tabindex="-1" aria-labelledby="modalCriarLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
+        <div class="modal-dialog modal-lg">
+                <div class="modal-content ">
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalCriarLabel">Adicionar Usuario </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
@@ -31,66 +75,32 @@
                 </div>
             </div>
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
 
 
 
 
-        @*Sao mensagens de erro, que pegam as informacoes da controller, são descritas la*@
 
-
-        @if (TempData["MensagemSucesso"] != null)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                @TempData["MensagemSucesso"]
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        }
-
-        @if (TempData["MensagemErro"] != null)
-        {
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                @TempData["MensagemErro"]
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        }
+       
 
 
 
-        @* A barra de pesquisar *@
-        <div class="search-position">
-            <div id="container-search">
-                <div class="input-group">
-                    <div class="input-icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-
-                    </div>
-
-                    <input type="text"
-                           id="search"
-                           class="input-field"
-                           placeholder="Pesquisar Produto" />
-                </div>
-            </div>
-        </div>
+        
 
         @*Aqui e a tabela, onde quando for adicionado ira aparecer um novo revendedor*@
+<div class="table-responsive table-wrapper p-3">
+    <table class="table table-bordered table-striped" id="table">
 
-        <table class="table" id="table">
-            <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Email</th>
+        <thead class="table-thead">
+            <tr class="div-thead">
+                    <th scope="col" class="idTR">ID</th>
                     <th scope="col">Login</th>
-                    <th scope="col">Senha</th>
-                    <th scope="col">Nivel</th>
-                    <th scope="col">Data de Criação</th>
-                    <th scope="col">Modificar</th>
+                    <th scope="col">Email</th>  
+                    <th scope="col">Nivel de Acesso</th>            
+                    <th scope="col" class="alinharModificar-ApagarTh">Modificar</th>
+                    <th scope="col" class="alinharModificar-ApagarTh">Apagar</th>
 
                 </tr>
+
             </thead>
             <tbody>
                 @if (Model != null && Model.Any())
@@ -98,74 +108,97 @@
                     foreach (UsuarioViewModel usuario in Model)
                     {
                         <tr>
-                            <th scope="row">@usuario.Id</th>     
-                            <td>@usuario.Email</td>
-                            <td>@usuario.Login</td>
-                            <td>@usuario.Senha</td>
-                            <td>@usuario.Perfil</td>
-                            <td>@usuario.DataCadastro</td>
-                            <td>
-                                <div role="group">
+                            <th scope="row" class="idTH">@usuario.Id</th>
+                            <td scope="row" class="espacoPadraoTabela">@usuario.Login</td>
+                            <td scope="row" class="espacoPadraoTabela">@usuario.Email</td>
+                            <td scope="row" class="espacoPadraoTabela">@usuario.Perfil</td>
+                            <td scope="row" class="espacoModificarOpcoes">
+                                <div role="group" class="d-grid gap-1 formatacaoBotaoTabela">
 
 
-                                    @*Esse daqui e o modal de EDITAR REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
-                                    <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDetalhes-@usuario.Id">
-                                        Detalhes
-                                    </a>
+                                @*-----Botão DETALHES-----*@
+                                <a role="button" class="btn-sm btn-primary btnModificadoTamanhoIgual" data-bs-toggle="modal" data-bs-target="#modalDetalhes-@usuario.Id">
+                                    <i class="fa-solid fa-calendar-week"></i>
+                                    Detalhes
+                                </a>
 
-                                    <div class="modal fade" id="modalDetalhes-@usuario.Id" tabindex="-1" aria-labelledby="modalDetalhesLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title">Detalhes Usuário</h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                @*Esse daqui e o modal de DETALHES DO PRODUTO  *@
+                                <div class="modal fade" id="modalDetalhes-@usuario.Id" tabindex="-1" aria-labelledby="modalDetlahesLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-lg ">
+                                        <div class="modal-content ">
+                                            <div class="modal-header d-flex justify-content-between align-items-center">
+
+                                                <h5 class="modal-title">Detalhes do Usuário</h5>
+
+                                                <div class="d-flex gap-2">
+                                                    <a role="button"
+                                                       class="btn btn-outline-success btnApagar btnAbrirModal"
+                                                       data-modal-target="#modalEditar-@usuario.Id"
+                                                       data-current-modal="#modalDetalhes-@usuario.Id">
+                                                        <i class="fa-solid fa-pen-to-square fa-lg"></i>
+                                                    </a>
+
+                                                    <a role="button"
+                                                       class="btn btn-outline-danger btnApagar btnAbrirModal"
+                                                       data-modal-target="#modalApagarConfirmacao-@usuario.Id"
+                                                       data-current-modal="#modalDetalhes-@usuario.Id">
+                                                        <i class="fa-regular fa-trash-can fa-lg"></i>
+                                                    </a>
+
+
+                                                    <button type="button" class="btn-close btn-close-modal"
+                                                            data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
-                                                <div class="modal-body">
-                                                    @Html.Partial("~/Views/Usuario/_Detalhes.cshtml", usuario)
-                                                </div>
+                                            </div>
+                                            <div class="modal-body">
+                                                @await Html.PartialAsync("_Detalhes", usuario)
                                             </div>
                                         </div>
                                     </div>
+                                </div>
 
 
-                                    <a role="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar-@usuario.Id">
-                                        Editar
-                                    </a>
+                                @*-----Botão EDITAR-----*@
+                                <a role="button" class="btn-sm btn-success btnModificadoTamanhoIgual" data-bs-toggle="modal" data-bs-target="#modalEditar-@usuario.Id">
+                                    <i class="fa-solid fa-pen-to-square"></i>
+                                    Editar
+                                </a>
 
                                     <div class="modal fade" id="modalEditar-@usuario.Id" tabindex="-1" aria-labelledby="modalEditarLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
+                                        <div class="modal-dialog modal-lg">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title">Alterar Usuario</h5>
+                                                    <h5 class="modal-title">Editar Usuario</h5>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    @Html.Partial("~/Views/Usuario/Editar.cshtml", usuario)
+                                                    @await Html.PartialAsync("~/Views/Usuario/Editar.cshtml", usuario)
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+                            </div>
+                        </td>
+                        <td scope="row" class="espacoApagarOpcoes">
+                                 
+                                   
 
-
-
-                                    @*Esse daqui e o modal de APAGAR O REVENDEDOR (OBSERVACAO, DEVE FAZER UM JAVASCRIPT PRA CONFIRMAR REALMENTE) *@
-
-                                    <a role="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@usuario.Id">
-                                        Apagar
-                                    </a>
+                            @*-----Botão APAGAR-----*@
+                            <a role="button" class="btn-sm btn-outline-danger btnApagar" data-bs-toggle="modal" data-bs-target="#modalApagarConfirmacao-@usuario.Id">
+                                <i class="fa-regular fa-trash-can fa-lg"></i>
+                            </a>
 
                                     <div class="modal fade" id="modalApagarConfirmacao-@usuario.Id" tabindex="-1" aria-labelledby="modalApagarConfirmacaoLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
+                                        <div class="modal-dialog modal-lg">
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <h5 class="modal-title">Apagar Revendedor</h5>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    @Html.Partial("~/Views/Usuario/ApagarConfirmacao.cshtml", usuario)
+                                                    @await Html.PartialAsync("~/Views/Usuario/ApagarConfirmacao.cshtml", usuario)
                                                 </div>
                                             </div>
-                                        </div>
                                     </div>
                                 </div>
                             </td>
@@ -175,7 +208,27 @@
 
             </tbody>
         </table>
-    </div>
+    
 </div>
 
 
+<script>
+        document.addEventListener('click', function (e) {
+        if (e.target.closest('.btnAbrirModal')) {
+
+            const btn = e.target.closest('.btnAbrirModal');
+            const currentModal = document.querySelector(btn.dataset.currentModal);
+            const nextModal = document.querySelector(btn.dataset.modalTarget);
+
+            // Fecha o modal atual
+            const modalInstance = bootstrap.Modal.getInstance(currentModal);
+            modalInstance.hide();
+
+            // Aguarda o fade-out do modal atual (~300ms)
+            currentModal.addEventListener('hidden.bs.modal', function () {
+                const newModal = new bootstrap.Modal(nextModal);
+                newModal.show();
+            }, { once: true });
+        }
+    });
+</script>
