--- a/cafeservellocontroler/Views/Usuario/_Detalhes.cshtml
+++ b/cafeservellocontroler/Views/Usuario/_Detalhes.cshtml
@@ -3,40 +3,83 @@
 @{
     ViewData["Title"] = "Detalhes do Revendedor";
 }
-<table>
-    <tr>
-        <td>
-            <h2>Detalhes do Revendedor</h2>
-            <hr />
-            <dl class="row">
-                <dt class="col-sm-2">
-                    Login
-                </dt>
-                <dd class="col-sm-10">
-                    @Model.Login
-                </dd>
-                <dt class="col-sm-2">
-                    Email
-                </dt>
-                <dd class="col-sm-10">
-                    @Model.Email
-                </dd>
-                <dt class="col-sm-2">
-                    Data Cadastro
-                </dt>
-                <dd class="col-sm-10">
-                    @Model.DataCadastro
-                </dd>
-                <dt class="col-sm-2">
-                    Data da ultima Atualização Cadastro
-                </dt>
-                <dd class="col-sm-10">
-                    @Model.DataAtualizacaoCadastro
-                </dd>
-            </dl>
-            <div>
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+
+
+<div class=" div-Criar responsivo mb-3 shadow-sm">
+    <div class="card-body">
+
+
+        <div class="row div-conteudo">
+
+            <p class="p-horario">
+                <strong>Nome:</strong>
+                @Model.Login
+            </p>
+
+            <p class="p-horario">
+                <strong>Email:</strong>
+                <span>@Model.Email</span>
+            </p>
+
+
+            <div class="col-md-6 ps-0">
+                <p class="p-horario">
+                    <strong>Nível de Acesso:</strong>
+                    <span>@Model.Perfil</span>
+                </p>
             </div>
-        </td>
-    </tr>
-</table>
+
+
+            
+        </div>
+
+        <br />
+        <div class="row div-horario">
+            <div class="col-12 col-md-6 mb-3">
+                <strong>Data Cadastro:</strong>
+                <p class="m-auto p-horario">
+                    <i class="fa-regular fa-calendar"></i>
+                    <strong>Data:</strong>
+                    @Model.DataCadastro.ToString("dd/MM/yyyy")
+                    <br />
+
+                    <i class="fa-regular fa-alarm-clock"></i>
+                    <strong>Horas:</strong>
+                    @Model.DataCadastro.ToString("HH:mm")
+                </p>
+            </div>
+
+            <div class="col-12 col-md-6 mb-3">
+                <strong>Data Atualizações:</strong>
+                <p class="m-auto p-horario">
+                    <i class="fa-solid fa-calendar"></i>
+                    <strong>Data:</strong>
+                    @Model.DataAtualizacaoCadastro.ToString("dd/MM/yyyy")
+                    <br />
+
+                    <i class="fa-solid fa-alarm-clock"></i>
+                    <strong>Horas:</strong>
+                    @Model.DataAtualizacaoCadastro.ToString("HH:mm")
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
