--- a/cafeservellocontroler/wwwroot/css/modal.css
+++ b/cafeservellocontroler/wwwroot/css/modal.css
@@ -8,10 +8,12 @@
     background: white;
     /* branco 80% opaco */
     backdrop-filter: blur(5px); /* opcional: efeito vidro fosco */
+
 }
 
 .modal-title {
-    background-color: white;
+    box-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
+    color: white;
     padding: 10px;
     font-size: 24px;
     border-radius: 6px;
@@ -28,6 +30,8 @@
     border-radius: 4px;
 }
 
+/*Modelagem de tela*/
+
 label {
     font-size: 15px;
 }
@@ -35,15 +39,20 @@ label {
 input.form-control {
     height: 40px;
 }
+select.form-control {
+    height: 40px;
+}
 
 .div-Criar {
     background: #f2f2f2;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
     padding: 15px;
     border-radius: 5px;
 }
 
 .p-horario {
-    background: #F5F5F5;
+    background: white;
+    box-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
     padding: 10px;
     border-radius: 5px;
 }
@@ -52,14 +61,14 @@ input.form-control {
     padding: 20px;
     margin-bottom: 0;
     border-radius: 5px;
-    background-color: white;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
 }
 
 .div-horario {
     padding: 20px;
     margin-bottom: 0;
     border-radius: 5px;
-    background-color: white;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
 }
 
 .responsivo {
